[project]
name = "pi-backuper"
version = "1.0.3"
description = "Win11 raw USB/SD backup/restore/clone tool for removable media."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }

authors = [
  { name = "cFunkz", email = "contact@uxscalelabs.online" }
]

keywords = [
  "raspberry-pi",
  "backup",
  "restore",
  "disk-imaging",
  "windows",
  "usb",
  "sd-card"
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Archiving :: Backup",
]

# Runtime dependencies ONLY
dependencies = [
  "pywin32>=311",
  "WMI>=1.5.1",
  "psutil>=7.2.1",
]

[project.urls]
Homepage = "https://github.com/cfunkz/PI-Backuper"
Repository = "https://github.com/cfunkz/PI-Backuper"
Issues = "https://github.com/cfunkz/PI-Backuper/issues"
Releases = "https://github.com/cfunkz/PI-Backuper/releases"
